--- a/app/src/main/res/layout/fragment_home_no_team.xml
+++ b/app/src/main/res/layout/fragment_home_no_team.xml
@@ -87,5 +87,35 @@
             app:layout_constraintEnd_toEndOf="parent"
             />
 
+        <TextView
+            android:id="@+id/txt_homeNoTeam_recommendTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="추천 팀"
+
+            android:layout_marginTop="24dp"
+            android:textSize="15sp"
+            android:textFontWeight="700"
+
+            app:layout_constraintTop_toBottomOf="@id/line_homeNoTeam_hr"
+            app:layout_constraintStart_toStartOf="@id/line_homeNoTeam_start"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/list_homeNoTeam_teamRecommend"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            tools:listitem="@layout/row_team_select_list_item"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+
+            android:layout_marginTop="12dp"
+
+            app:layout_constraintTop_toBottomOf="@id/txt_homeNoTeam_recommendTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
