--- a/app/src/main/res/layout/activity_team_detail.xml
+++ b/app/src/main/res/layout/activity_team_detail.xml
@@ -61,6 +61,8 @@
             android:textFontWeight="700"
             android:textSize="17sp"
 
+            android:layout_marginTop="16dp"
+
             app:layout_constraintStart_toStartOf="@id/line_teamDetail_start"
             app:layout_constraintTop_toBottomOf="@id/img_teamDetail_teamLogo" />
 
