--- a/app/src/main/res/layout/fragment_sign_up_1.xml
+++ b/app/src/main/res/layout/fragment_sign_up_1.xml
@@ -9,10 +9,6 @@
             name="vm"
             type="com.heechan.membeder.ui.signUp.SignUpViewModel" />
 
-<!--        <variable-->
-<!--            name="signUp"-->
-<!--            type="com.heechan.membeder.model.data.ui.SignUp" />-->
-
         <import type="com.heechan.membeder.util.LoginType"/>
     </data>
 
@@ -150,6 +146,19 @@
                 app:layout_constraintEnd_toEndOf="@id/line_signUp1_end"
                 app:layout_constraintStart_toStartOf="@id/line_signUp1_start"
                 app:layout_constraintTop_toBottomOf="@+id/edt_signUp1_password" />
+
+            <com.heechan.membeder.ui.view.InputErrorMessageView
+                android:id="@+id/err_signUp1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                app:inputErrorMessageMessage="에러메시지"
+                android:visibility="gone"
+
+                app:layout_constraintTop_toBottomOf="@id/edt_signUp1_passwordCheck"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
 
 
             <Button
