--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -48,4 +48,8 @@
     <declare-styleable name="SignUpProgress">
         <attr name="signUpProgressIndex" format="integer"/>
     </declare-styleable>
+
+    <declare-styleable name="InputErrorMessageView">
+        <attr name="inputErrorMessageMessage" format="string"/>
+    </declare-styleable>
 </resources>
