--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -134,5 +134,18 @@
             app:layout_constraintEnd_toEndOf="@id/line_login_end"
             app:layout_constraintStart_toStartOf="@id/line_login_start" />
 
+        <com.heechan.membeder.ui.view.InputErrorMessageView
+            android:id="@+id/err_login"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            app:inputErrorMessageMessage="에러메시지"
+            android:visibility="gone"
+
+            app:layout_constraintTop_toBottomOf="@id/btn_login_submit"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
