--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -126,7 +126,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
-            android:text="다음"
+            android:text="로그인"
 
             android:layout_marginTop="12dp"
 
