--- a/app/src/main/res/layout/fragment_team_name.xml
+++ b/app/src/main/res/layout/fragment_team_name.xml
@@ -4,90 +4,109 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="com.heechan.membeder.ui.team.make.TeamMakeViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.team.make.TeamNameFragment">
+        android:fillViewport="true">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/line_teamMakeName_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".ui.team.make.TeamNameFragment">
 
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="@dimen/app_padding_hr" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/line_teamMakeName_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/line_teamMakeName_end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="@dimen/app_padding_hr" />
 
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="@dimen/app_padding_hr" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/line_teamMakeName_end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="@dimen/app_padding_hr" />
 
-            android:layout_marginTop="14sp"
-            android:text="팀의 기본인"
-            android:textFontWeight="700"
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-            android:textSize="22sp"
+                android:layout_marginTop="14sp"
+                android:text="팀의 기본인"
+                android:textFontWeight="700"
 
-            app:layout_constraintStart_toStartOf="@id/line_teamMakeName_start"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="UnusedAttribute" />
+                android:textSize="22sp"
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/line_teamMakeName_start"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="UnusedAttribute" />
 
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="팀명부터 입력해주세요."
-            android:textColor="?attr/colorPrimary"
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
 
-            android:textFontWeight="700"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="팀명부터 입력해주세요."
+                android:textColor="?attr/colorPrimary"
 
-            android:textSize="22sp"
-            app:layout_constraintStart_toStartOf="@id/line_teamMakeName_start"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            tools:ignore="UnusedAttribute" />
+                android:textFontWeight="700"
 
-        <EditText
-            style="@style/edt_icon_style"
-            android:layout_width="0dp"
+                android:textSize="22sp"
+                app:layout_constraintStart_toStartOf="@id/line_teamMakeName_start"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                tools:ignore="UnusedAttribute" />
 
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:drawableStart="@drawable/ic_badge"
+            <EditText
+                android:id="@+id/edt_teamName_name"
+                style="@style/edt_icon_style"
+                android:layout_width="0dp"
 
-            android:hint="여기에 입력해주세요"
-            android:text="@={vm.teamName}"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:drawableStart="@drawable/ic_badge"
 
-            app:layout_constraintEnd_toEndOf="@id/line_teamMakeName_end"
-            app:layout_constraintStart_toStartOf="@id/line_teamMakeName_start"
-            app:layout_constraintTop_toBottomOf="@id/textView2" />
+                android:hint="여기에 입력해주세요"
+                android:text="@={vm.teamName}"
 
-        <Button
-            android:id="@+id/btn_teamMakeName_next"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@id/line_teamMakeName_end"
+                app:layout_constraintStart_toStartOf="@id/line_teamMakeName_start"
+                app:layout_constraintTop_toBottomOf="@id/textView2" />
 
-            android:text="다음"
-            android:layout_marginBottom="@dimen/app_padding_hr"
+            <com.heechan.membeder.ui.view.InputErrorMessageView
+                android:id="@+id/err_teamName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
 
-            app:layout_constraintStart_toStartOf="@id/line_teamMakeName_start"
-            app:layout_constraintEnd_toEndOf="@id/line_teamMakeName_end"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+                android:visibility="gone"
+                app:inputErrorMessageMessage="에러메시지"
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/edt_teamName_name" />
+
+            <Button
+                android:id="@+id/btn_teamMakeName_next"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:layout_marginBottom="@dimen/app_padding_hr"
+                android:text="다음"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/line_teamMakeName_end"
+                app:layout_constraintStart_toStartOf="@id/line_teamMakeName_start" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
