--- a/app/src/main/res/layout/fragment_schedule_dead_line.xml
+++ b/app/src/main/res/layout/fragment_schedule_dead_line.xml
@@ -83,6 +83,19 @@
                 app:layout_constraintStart_toStartOf="@id/line_scheduleDeadLine_start"
                 app:layout_constraintTop_toBottomOf="@id/textView2" />
 
+            <com.heechan.membeder.ui.view.InputErrorMessageView
+                android:id="@+id/err_scheduleDeadLine"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                app:inputErrorMessageMessage="에러메시지"
+                android:visibility="gone"
+
+                app:layout_constraintTop_toBottomOf="@id/edt_scheduleDeadLine_date"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
             <Button
                 android:id="@+id/btn_scheduleDeadLine_submit"
                 android:layout_width="0dp"
