--- a/app/src/main/res/layout/fragment_home_team.xml
+++ b/app/src/main/res/layout/fragment_home_team.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:bindSwipeRefreshing="@{vm.state}"
-        app:bindSwipeOnRefresh="@{vm::refresh}">
+        app:bindSwipeOnRefresh="@{vm::homeRefresh}">
 
 
         <androidx.core.widget.NestedScrollView
