--- a/app/src/main/res/layout/fragment_team_building.xml
+++ b/app/src/main/res/layout/fragment_team_building.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -9,37 +9,44 @@
             type="com.heechan.membeder.ui.main.MainViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        bindSwipeOnRefresh="@{vm::getTeamData}"
+        bindSwipeRefreshing="@{vm.state}"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.main.TeamBuildingFragment">
+        android:layout_height="match_parent">
 
-        <com.heechan.membeder.ui.view.header.NavigationHeader
-            android:id="@+id/hd_teamBuilding"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
 
-            app:navigationTitle="팀 빌딩"
-            app:navigationMenu1Icon="@drawable/ic_plus"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".ui.main.TeamBuildingFragment">
 
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
+            <com.heechan.membeder.ui.view.header.NavigationHeader
+                android:id="@+id/hd_teamBuilding"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_teamBuilding_teamList"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
 
-            app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:navigationMenu1Icon="@drawable/ic_plus"
+                app:navigationTitle="팀 빌딩" />
 
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/hd_teamBuilding"
-            app:layout_constraintVertical_bias="1.0"
-            tools:listitem="@layout/row_team_select_list_item" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_teamBuilding_teamList"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/hd_teamBuilding"
+                app:layout_constraintVertical_bias="1.0"
+                tools:listitem="@layout/row_team_select_list_item" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
