--- a/app/src/main/res/layout/fragment_sign_up_1.xml
+++ b/app/src/main/res/layout/fragment_sign_up_1.xml
@@ -168,8 +168,10 @@
 
                 android:text="다음"
 
-                android:layout_marginBottom="@dimen/app_padding_hr"
+                android:layout_marginVertical="@dimen/app_padding_hr"
 
+                app:layout_constraintVertical_bias="1"
+                app:layout_constraintTop_toBottomOf="@id/err_signUp1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/line_signUp1_end"
                 app:layout_constraintStart_toStartOf="@id/line_signUp1_start" />
