Team list arrow

--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -12,16 +12,19 @@
         android:layout_height="match_parent"
         tools:context=".ui.main.MoreFragment">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btn_more_logout"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
 
-            android:text="More Fragment"
+            android:text="로그아웃"
+            android:layout_marginHorizontal="@dimen/app_padding_hr"
 
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
