--- a/app/src/main/res/layout/fragment_sign_up_8.xml
+++ b/app/src/main/res/layout/fragment_sign_up_8.xml
@@ -116,7 +116,7 @@
                 android:layout_marginTop="23dp"
 
                 android:hint="자기소개를 적어주세요"
-                android:lines="4"
+                android:minLines="4"
                 android:gravity="top"
 
                 android:paddingVertical="16dp"
