--- a/app/src/main/res/layout/row_team_select_list_item.xml
+++ b/app/src/main/res/layout/row_team_select_list_item.xml
@@ -39,6 +39,17 @@
             app:layout_constraintStart_toEndOf="@+id/img_teamSelect_teamLogo"
             app:layout_constraintTop_toTopOf="@id/img_teamSelect_teamLogo" />
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:src="@drawable/ic_arrow_right"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
