--- a/app/src/main/res/values-v28/themes.xml
+++ b/app/src/main/res/values-v28/themes.xml
@@ -12,4 +12,17 @@
         <item name="android:background">@drawable/sh_square_app_radius</item>
         <item name="android:backgroundTint">?attr/btn_fill_backgroundColor</item>
     </style>
+
+    <style name="edt_style" parent="Widget.AppCompat.EditText">
+        <item name="android:textColor">?attr/edt_textColor</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColorHint">?attr/edt_hintColor</item>
+        <item name="android:textFontWeight">600</item>
+
+        <item name="android:background">@drawable/sh_square_app_radius</item>
+        <item name="android:backgroundTint">?attr/edt_backgroundColor</item>
+
+        <item name="android:paddingVertical">20dp</item>
+        <item name="android:paddingHorizontal">20dp</item>
+    </style>
 </resources>
