--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -96,6 +96,7 @@
         <item name="android:textColor">?attr/edt_textColor</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColorHint">?attr/edt_hintColor</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">600</item>
 
         <item name="android:background">@drawable/sh_square_app_radius</item>
         <item name="android:backgroundTint">?attr/edt_backgroundColor</item>
