--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -48,10 +48,7 @@
             android:layout_height="wrap_content"
 
             android:layout_marginHorizontal="@dimen/app_padding_hr"
-            android:background="@drawable/sh_button"
-
-            android:backgroundTint="@color/white500"
-            android:elevation="3dp"
+            android:background="@drawable/sh_google_button"
 
             android:gravity="center"
             android:paddingHorizontal="20dp"
