--- a/app/src/main/res/layout/fragment_home_team.xml
+++ b/app/src/main/res/layout/fragment_home_team.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="singleton"
-            type="com.heechan.membeder.model.data.SingletonObject" />
+            type="com.heechan.membeder.ui.SingletonObject" />
     </data>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
