--- a/app/src/main/res/layout/activity_design_system.xml
+++ b/app/src/main/res/layout/activity_design_system.xml
@@ -94,7 +94,7 @@
 
                 android:layout_marginBottom="12dp"
                 android:drawableStart="@drawable/ic_search"
-
+                android:text="저는 기본값"
                 android:hint="저는 힌트입니다." />
 
             <com.heechan.membeder.ui.view.TagView
@@ -110,6 +110,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
+                    android:drawablePadding="2dp"
                     android:background="@drawable/se_switch_track"
                     android:thumb="@drawable/se_switch_thumb"
                     app:switchMinWidth="44dp"
