--- a/app/src/main/res/drawable/se_switch_thumb.xml
+++ b/app/src/main/res/drawable/se_switch_thumb.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?><!-- se_switch_thumb.xml -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
-        <shape>
-            <corners android:radius="12dp" />
+        <shape android:shape="oval">
+            <corners android:radius="24dp" />
             <size android:width="24dp" android:height="24dp" />
             <solid android:color="@color/blue500" />
         </shape>
@@ -10,6 +10,7 @@
 
     <item android:state_checked="false">
         <shape android:shape="oval">
+            <corners android:radius="24dp"/>
             <size android:width="24dp" android:height="24dp" />
             <solid android:color="@color/gray300" />
         </shape>
