--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+            name="singleton"
+            type="com.heechan.membeder.ui.SingletonObject" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,7 +16,28 @@
         android:background="?attr/weight_backgroundColor"
         >
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/line_more_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:orientation="vertical"
+
+            app:layout_constraintGuide_begin="@dimen/app_padding_hr"
+            />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/line_more_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:orientation="vertical"
+
+            app:layout_constraintGuide_end="@dimen/app_padding_hr"
+            />
+
         <com.heechan.membeder.ui.view.header.TitleHeader
+            android:id="@+id/hd_more"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
@@ -26,11 +49,63 @@
             app:layout_constraintEnd_toEndOf="parent"
             />
 
+        <TextView
+            android:id="@+id/txt_more_profileTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
+            android:text="프로필"
+            android:textSize="17sp"
+            android:textFontWeight="700"
 
+            android:layout_marginTop="40dp"
 
+            app:layout_constraintTop_toBottomOf="@id/hd_more"
+            app:layout_constraintStart_toStartOf="@id/line_more_start"
+            />
 
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/img_more_profileImage"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
 
+            android:layout_marginTop="16dp"
+            android:src="@drawable/heechan"
+
+            app:layout_constraintStart_toStartOf="@id/line_more_start"
+
+            app:layout_constraintTop_toBottomOf="@id/txt_more_profileTitle"
+            app:shapeAppearanceOverlay="@style/cornerSize10Percent" />
+
+        <TextView
+            android:id="@+id/txt_more_profileName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@{singleton.userData.name}"
+            tools:text="박희찬"
+            android:textSize="15sp"
+            android:textFontWeight="700"
+
+            android:layout_marginStart="8dp"
+
+            app:layout_constraintTop_toTopOf="@id/img_more_profileImage"
+            app:layout_constraintStart_toEndOf="@id/img_more_profileImage"
+            />
+
+        <TextView
+            android:id="@+id/txt_more_profileProfession"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@{singleton.userData.profession}"
+            android:textFontWeight="600"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@+id/img_more_profileImage"
+
+            app:layout_constraintStart_toStartOf="@id/txt_more_profileName"
+            app:layout_constraintTop_toBottomOf="@id/txt_more_profileName"
+            tools:text="개발좌" />
 
 
 
